examples/pts/neg/externResource.effekt
module examples/pts/neg/externResource

extern resource test: _

def main() = {
    ()
}